--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <iframe scr="lib/Hello.html" width="200" height="200"/>
+        <iframe src="Lib/Hello.html" width="200" height="200"/>
     </body>
 </html>
