Hello uses Style.css

--- a/lib/Hello.html
+++ b/lib/Hello.html
@@ -1,7 +1,8 @@
-<!-- Author: Ivan Dmitrichenko-->
+<!-- Author: Ivan Dmitrichenko (ivanovivan@gmail.com)-->
 <html>
     <body>
         <head>
+            <link type="text/css" rel="stylesheet" media="all" href="Style.css"/>
         </head>
         <h1>
             Hello, Ivan!
