--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link type="text/css" rel="stylesheet" media="all" href="Style.css"/>
+    </head>
+    
     <body>
         <iframe src="Lib/Hello.html" width="200" height="200"/>
     </body>
